src/test/ui/consts/match_ice.stderr
error: to use a constant of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^

error: constants of type `T` cannot be used in a pattern
  --> $DIR/match_ice.rs:17:9
   |
LL |         K => {}
   |         ^

error: to use a constant of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^

error: constants of type `T` cannot be used in a pattern
  --> $DIR/match_ice.rs:17:9
   |
LL |         K => {}
   |         ^

error: aborting due to 4 previous errors

